k8s/infrastructure/overlays/staging/ingress-gateway-tls-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: publicgateway
  namespace: istio-system
  labels:
    istio: publicgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: ingress-cert-frompfx
